<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop = "10dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp">

    <LinearLayout
        android:id="@+id/event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:alignItems="center"
        android:background="@drawable/border_design"
        app:justifyContent="space_around"
        >
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/title"
        android:textColor="@color/teal_200"
        android:layout_weight = "2"
        />

    <TextView
        android:id="@+id/create_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/create_date"
        android:textSize="@dimen/date_text_size"
        android:layout_weight = "1.5"
        />

    <TextView
        android:id="@+id/due_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/due_date"
        android:textSize="@dimen/date_text_size"
        android:layout_weight = "1.5"
        />

        <TextView
            android:id="@+id/details"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

        <CheckBox
            android:id="@+id/select_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:focusableInTouchMode="false"
            android:layout_weight = "0"
        />

    </LinearLayout>

</LinearLayout>
